<resources>
    <string name="app_name">Github User</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Github username…</string>
    <string name="username">username</string>
    <string name="user_avatar_description">Image of Github\'s user</string>
    <string name="tab_description">Followers and following tab</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="number_99">99</string>
    <string name="repositories">Repositories</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="john_doe">John Doe</string>
    <string name="john_doe_description">Degree in computer science or computer programming. End user-oriented. Expert IT skills. Strong aptitude for math. Advanced knowledge of operating systems.</string>
    <string name="no_name">No Name</string>
    <string name="no_bio">No Bio</string>

    <!-- Menu Screen -->
    <string name="settings">Settings</string>
    <string name="show_menu">Show Menu</string>
    <string name="favorites">Favorites</string>
    <string name="share">Share</string>

    <!-- Preference Screen -->
    <string name="app_theme">App Theme</string>
    <string name="app_theme_default">Follow System</string>

    <!-- Activity Title -->
    <string name="home_activity_title">All Github Users</string>
    <string name="user_details_activity_title">Username</string>
    <string name="settings_activity_title">App Settings</string>
    <string name="list_favorite_activity_title">List Favorite User</string>

    <!-- Share Template -->
    <string name="share_template">This user has a lot of repositories and followers. Please follow them on Github via https://github.com/%1$s</string>
    <string name="share_using">Share using</string>

    <!-- Network -->
    <string name="offline_mode">No network detected</string>
    <string name="general_error">Something went wrong! Try again later</string>
    <string name="no_data_description">There is no data to be found</string>
    <string name="favorite_toggle_button">Favorite toggle button</string>
</resources>