<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconTint="?attr/colorOnPrimary"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />
    <group>
        <item
            android:id="@+id/favorites"
            android:title="@string/favorites"
            app:showAsAction="never" />
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            app:showAsAction="never" />
    </group>
</menu>