<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.UserDetailsActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/repo_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/number_99"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/followers_count"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/user_avatar" />

    <TextView
        android:id="@+id/followers_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/number_99"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/following_count"
        app:layout_constraintStart_toEndOf="@+id/repo_count" />

    <TextView
        android:id="@+id/following_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/number_99"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/followers_count" />


    <TextView
        android:id="@+id/repo_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/repositories"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toStartOf="@+id/followers_label"
        app:layout_constraintStart_toEndOf="@+id/user_avatar" />

    <TextView
        android:id="@+id/followers_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toStartOf="@+id/following_label"
        app:layout_constraintStart_toEndOf="@+id/repo_label" />

    <TextView
        android:id="@+id/following_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/followers_label" />


    <TextView
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/john_doe"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_avatar" />

    <TextView
        android:id="@+id/user_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/john_doe_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        style="@style/MyTheme.TabLayout"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/tab_description"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_bio" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_counter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:constraint_referenced_ids="repo_count,followers_count,following_count"
        app:layout_constraintBottom_toTopOf="@+id/flow_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_avatar"
        app:layout_constraintTop_toTopOf="@+id/user_avatar"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:constraint_referenced_ids="repo_label,followers_label,following_label"
        app:layout_constraintBottom_toBottomOf="@+id/user_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_avatar"
        app:layout_constraintTop_toBottomOf="@+id/flow_counter" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/user_details_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="user_avatar,repo_count,following_count,followers_count,repo_label,followers_label,following_label,user_name,user_bio,tabs,view_pager" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/favorite_toggle_button"
        android:focusable="true"
        android:src="@drawable/ic_favorite_24"
        android:tint="?attr/colorOnSecondary"
        app:backgroundTint="?attr/colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>